# wxmplot

./: .gitattributes  .gitignore  .travis.yml  ChangeLog  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  PKG-INFO  README.md  README.rst  README.txt  comparisons.html  examples.html  genindex.html  im1.py  imagepanel.html  index.html  installation.html  interactive.html  make_wininsts.bat  objects.inv  other.html  overview.html  plotpanel.html  publish_docs.sh  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: test_wxmplot_install.yml
Play/: ImageFrame2.py  pv_stripchart.py
_sources/: comparisons.rst.txt  examples.rst.txt  image.rst.txt  imagepanel.rst.txt  imagepanel.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  interactive.rst.txt  other.rst.txt  other.txt  overview.rst.txt  plotpanel.rst.txt  plotpanel.txt
_static/: bizstyle.js  documentation_options.js  lmfitdoc.css
doc/: Makefile  comparisons.rst  conf.py  examples.rst  imagepanel.rst  index.rst  installation.rst  interactive.rst  other.rst  overview.rst  plotpanel.rst
doc/_build/doctrees/: environment.pickle  imagepanel.doctree  index.doctree  installation.doctree  plotpanel.doctree
doc/_build/html/: .buildinfo  imagepanel.html  index.html  plotpanel.html  searchindex.js
doc/_build/latex/: mplot.aux  mplot.idx  mplot.ilg  mplot.ind  mplot.out  mplot.tex  mplot.toc
doc/_templates/: indexsidebar.html
doc/sphinx_theme/wxmplotdoc/: layout.html  theme.conf
doc/sphinx_theme/wxmplotdoc/static/: wxmplotdoc.css_t
examples/: BasicExamples.ipynb  DynamicExamples.ipynb  GUI_examples.py  basic_screenshot.py  cmy_image.py  compare_dislin_mpl.py  compare_plplot.py  contour.py  demo.py  discrete_data.py  dislin_comp.py  errorbar.py  extra_marker_and_line_reporting.py  fill_to_zero.py  fill_uncertainties.py  floatcontrol.py  histogram.py  image.py  image_scroll.py  imagematrix.py  interactive_multiplewindows.py  leftright.py  multiple_yaxes.py  multiplot.py  pilatus_display.py  plot_fromdatafile.py  plot_many_traces.py  plotapp.py  rgb_image.py  scatterplot.py  scope_mode_function.py  scope_mode_generator.py  scope_mode_mpl_compare.py  simple.py  stackedplot.py  stripchart.py  stripchart_epicsPV.py  test.py  theme_compare.py  tiff_display.py  (+6 more)
lib/: Closure.py  PlotConfig.py  PlotConfigFrame.py  __init__.py  baseframe.py  basepanel.py  colors.py  config.py  imageconf.py  imageframe.py  imagematrixframe.py  imagepanel.py  multiframe.py  plotapp.py  plotconfigframe.py  plotframe.py  plotpanel.py  residualplotframe.py  stackedplotframe.py  utils.py
tests/: basic_test.py
wxmplot/: __init__.py  _version.py  baseframe.py  basepanel.py  colors.py  config.py  contourdialog.py  imageconf.py  imageframe.py  imagematrixframe.py  imagepanel.py  inputhook.py  interactive.py  multiframe.py  plotapp.py  plotconfigframe.py  plotframe.py  plotpanel.py  stackedplotframe.py  utils.py
