[metadata]
name = wxmplot
description = wxPython plotting widgets using matplotlib
long_description =
    WXMPlot provides advanced wxPython widgets for plotting and image display
    of scientific data based on matplotlib. While matplotlib provides excellent
    general purpose plotting functionality and supports many GUI and non-GUI
    backends it does not have a very tight integration with any particular GUI
    toolkit. With a large number of plotting components and options, it is not
    easy for programmers to select plotting options for every stuation and not
    easy for end users to manipulate matplotlib plots.  Similarly, while
    wxPython has some plotting functionality, it has nothing as good or
    complete as matplotlib. The WXMPlot package attempts to bridge that gap.
    With the plotting and image display Panels and Frames from WXMPlot,
    programmers are able to provide plotting widgets that make it easy for end
    users to customize plots and interact with their data.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://github.com/newville/wxmplot
license = MIT License
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = wxPython matplotlib
project_urls =
    Source =  https://github.com/newville/wxmplot
    Documentation = https://newville.github.io/wxmplot/
    Tracker = https://github.com/newville/wxmplot/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
   wxPython>=4.0.3
   wxutils>=0.2.7
   matplotlib>=3.0.3
   numpy>=1.12

[options.extras_require]
doc =
    Sphinx
test =
    pytest
